src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Generic_Filter_1__c</fullName>
        <description>A generic filter included in EASY that can be re-purposed for an individual institutions&apos; needs.</description>
        <inlineHelpText>A generic filter included in EASY that can be re-purposed for an individual institutions&apos; needs.</inlineHelpText>
        <label>Start Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_Filter_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Filter_2__c</fullName>
        <description>A generic filter included in EASY that can be re-purposed for an individual institutions&apos; needs.</description>
        <inlineHelpText>A generic filter included in EASY that can be re-purposed for an individual institutions&apos; needs.</inlineHelpText>
        <label>Generic Filter 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_Filter_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Filter_3__c</fullName>
        <description>A generic filter included in EASY that can be re-purposed for an individual institutions&apos; needs.</description>
        <inlineHelpText>A generic filter included in EASY that can be re-purposed for an individual institutions&apos; needs.</inlineHelpText>
        <label>Generic Filter 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_Filter_3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grading_Scale__c</fullName>
        <description>From EASY application</description>
        <label>Grading Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Date__c</fullName>
        <description>From EASY application</description>
        <label>Graduation Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth__c</fullName>
        <label>zzGrowth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian1_Address2__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian1 Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian1_Address_Same__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>Parent/Guardian 1&apos;s Address is the same as the Applicant&apos;s</inlineHelpText>
        <label>zzGuardian1 Address Same</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guardian1_Address__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian1 Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian1_City__c</fullName>
        <description>From EASY application</description>
        <label>zzGuardian1 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian1_Country__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian1 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian1_Email__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guardian1_First_Name__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian1 First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian1_Last_Name__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian1 Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian1_Phone_Type__c</fullName>
        <description>From Easy Application</description>
        <label>zzGuardian1 Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guardian1_Phone__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guardian1_Postal_Code__c</fullName>
        <description>From EASY Applilcation</description>
        <label>zzGuardian1 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian1_Relationship__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian1 Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Relationship_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guardian1_State__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian1 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian2_Address2__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian2 Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian2_Address_Same__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>Guardian 2&apos;s address is same as Applicant&apos;s address</inlineHelpText>
        <label>zzGuardian2 Address Same</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guardian2_City__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian2 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian2_Country__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian2 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian2_Email__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guardian2_First_Name__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian2 First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian2_Last_Name__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian2 Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian2_Phone_Type__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian2 Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guardian2_Phone__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guardian2_Postal_Code__c</fullName>
        <description>From EASY application</description>
        <label>zzGuardian2 Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian2_Relationship__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian2 Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Relationship_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guardian2_State__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuardian2 State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guidance_Counselor_Email__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuidance Counselor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guidance_Counselor_First_Name__c</fullName>
        <label>zzGuidance Counselor First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guidance_Counselor_Last_Name__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuidance Counselor Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guidance_Counselor_Title__c</fullName>
        <description>From EASY Application</description>
        <label>zzGuidance Counselor Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holding_Name__c</fullName>
        <description>For test class purposes only</description>
        <label>Holding Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housing_Preference__c</fullName>
        <description>From EASY Application</description>
        <label>zzHousing Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residence Hall Room - One bed (no roommate)</fullName>
                </value>
                <value>
                    <fullName>Residence Hall Room - Two beds (one roommate)</fullName>
                </value>
                <value>
                    <fullName>Residence Hall Suite - Four beds (three roommates)</fullName>
                </value>
                <value>
                    <fullName>Apartment - One bedroom</fullName>
                </value>
                <value>
                    <fullName>Apartment - Two bedrooms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoming_Major__c</fullName>
        <description>The major earned prior to entering SGCS</description>
        <inlineHelpText>Major earned prior to entering SGCS</inlineHelpText>
        <label>Incoming Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intended Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intended_Term_of_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intended Term of Entry</label>
        <referenceTo>Academic_Term__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interpersonal_Skills__c</fullName>
        <description>For EASY workshop exercises</description>
        <label>zzInterpersonal Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_of_Instruction__c</fullName>
        <description>From EASY application</description>
        <inlineHelpText>Primary language of instruction</inlineHelpText>
        <label>zzLanguage of Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Law_Violation__c</fullName>
        <label>Law Violation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Custom field to track response to application question: What prompted you to inquire today?</description>
        <inlineHelpText>From response to application question</inlineHelpText>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Admissions_Lead_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leadership_Ability__c</fullName>
        <label>zzLeadership Ability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leadership_Experience__c</fullName>
        <label>zzLeadership Experience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_On_Campus__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>Answer to question: Will you be staying in Student Residence?*</inlineHelpText>
        <label>zzLive On Campus?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maturity_Level__c</fullName>
        <description>From EASY application</description>
        <label>zzMaturity Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Custom field for applicant&apos;s response in Application</description>
        <label>zzMiddle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <label>Migration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Recruit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Military_Service__c</fullName>
        <label>Military Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Official_English_Proficiency_Score__c</fullName>
        <description>Official score from score report</description>
        <label>Official English Proficiency Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Official_Final_GPA__c</fullName>
        <description>From Official Final Transcript</description>
        <inlineHelpText>From Official Final Transcript</inlineHelpText>
        <label>Official Final GPA</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Official_In_Progress_GPA__c</fullName>
        <description>From Official In-Progress Transcript</description>
        <inlineHelpText>From Official In-Progress Transcript</inlineHelpText>
        <label>Official In-Progress GPA</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opted_to_Attend__c</fullName>
        <description>Withdrawn application response to the institution they opted to attend</description>
        <inlineHelpText>Institution they attended instead of ONU</inlineHelpText>
        <label>Opted to Attend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains a reference to SOURCE application</description>
        <inlineHelpText>Contains a reference to SOURCE application</inlineHelpText>
        <label>Original Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>HistoryApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Lead_Source__c</fullName>
        <description>Custom field to hold the response to the question: If you selected &quot;Other,&quot; please specify.</description>
        <label>Other Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Education__c</fullName>
        <label>zzParent Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>To map from CCCB application</description>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <description>Custom field to store Applicant&apos;s prefix</description>
        <label>Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chaplain</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Pastor</fullName>
                </value>
                <value>
                    <fullName>Rev.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_College_Attendance__c</fullName>
        <description>Indicates applicant previously attended another college for credit</description>
        <label>zzPrior College Attendance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Privacy_Opt_In__c</fullName>
        <description>Documents the Contact has opted into receiving communications from Olivet.</description>
        <label>Privacy Opt In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Success__c</fullName>
        <label>zzProfessional Success</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROTC__c</fullName>
        <label>zzROTC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Readiness__c</fullName>
        <description>From EASY application</description>
        <label>zzReadiness</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruit_Decision_Plan__c</fullName>
        <label>Recruit Decision Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Start at Beginning of Term</fullName>
                </value>
                <value>
                    <fullName>Start at Middle of Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruit_Denied_Date__c</fullName>
        <label>Recruit Denied Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recruit_GUID__c</fullName>
        <externalId>true</externalId>
        <label>Recruit GUID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recruit_Signature__c</fullName>
        <label>Recruit Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruit_Status_Reason__c</fullName>
        <label>Recruit Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Connection__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>How do you know this applicant?</inlineHelpText>
        <label>Reference Connection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Email__c</fullName>
        <description>From EASY Application</description>
        <label>Reference Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reference_First_Name__c</fullName>
        <description>From EASY Application</description>
        <label>Reference First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Last_Name__c</fullName>
        <description>From EASY Application</description>
        <label>Reference Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Recommendation__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>From Reference</inlineHelpText>
        <label>Reference Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Highly Recommend</fullName>
                </value>
                <value>
                    <fullName>Recommend</fullName>
                </value>
                <value>
                    <fullName>Hesitantly Recommend</fullName>
                </value>
                <value>
                    <fullName>Do Not Recommend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Object_JSON__c</fullName>
        <description>For test class use only</description>
        <label>Related Object JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Religious_Affiliation__c</fullName>
        <description>Custom field from application</description>
        <label>Religious Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A.M.E.</fullName>
                </value>
                <value>
                    <fullName>Apostolic</fullName>
                </value>
                <value>
                    <fullName>Assembly of God</fullName>
                </value>
                <value>
                    <fullName>Baptist</fullName>
                </value>
                <value>
                    <fullName>Bible</fullName>
                </value>
                <value>
                    <fullName>Brethren in Christ</fullName>
                </value>
                <value>
                    <fullName>C.C.C.U.</fullName>
                </value>
                <value>
                    <fullName>Catholic</fullName>
                </value>
                <value>
                    <fullName>Chicago Central Naz</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Church of Christ</fullName>
                </value>
                <value>
                    <fullName>Church of God</fullName>
                </value>
                <value>
                    <fullName>Congregational</fullName>
                </value>
                <value>
                    <fullName>Covenant</fullName>
                </value>
                <value>
                    <fullName>E. Michigan Nazarene</fullName>
                </value>
                <value>
                    <fullName>Episcopal</fullName>
                </value>
                <value>
                    <fullName>Evang. Mennonite</fullName>
                </value>
                <value>
                    <fullName>Evang. Unit. Brethrn</fullName>
                </value>
                <value>
                    <fullName>Evangelical</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Free Methodist</fullName>
                </value>
                <value>
                    <fullName>Friends</fullName>
                </value>
                <value>
                    <fullName>Greek Orthodox</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Holiness</fullName>
                </value>
                <value>
                    <fullName>Illinois Dist. Naz</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Indianapolis Nazaren</fullName>
                </value>
                <value>
                    <fullName>Jewish Lutheran</fullName>
                </value>
                <value>
                    <fullName>Mennonite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residency__c</fullName>
        <label>Residency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Residency_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SACEP_Agreement__c</fullName>
        <label>SACEP Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAT_Composite__c</fullName>
        <description>EASY Application</description>
        <label>SAT Composite</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIS_Decision_Codes__c</fullName>
        <description>To be used for integration</description>
        <inlineHelpText>From SIS integration</inlineHelpText>
        <label>SIS Decision Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC Admit Student</fullName>
                </value>
                <value>
                    <fullName>AD Admitted</fullName>
                </value>
                <value>
                    <fullName>AH Admit-Hold</fullName>
                </value>
                <value>
                    <fullName>AR Apl-Received</fullName>
                </value>
                <value>
                    <fullName>C1 Cancel - Not 1st Choice</fullName>
                </value>
                <value>
                    <fullName>CA Cancel - Athletics</fullName>
                </value>
                <value>
                    <fullName>CB Cancel - Belief-Feel-Mission</fullName>
                </value>
                <value>
                    <fullName>CC Cancel-2 Yr College-May Not Tr</fullName>
                </value>
                <value>
                    <fullName>CD Cancel - Duplicate Application</fullName>
                </value>
                <value>
                    <fullName>CF Cancel - Distance (too Far)</fullName>
                </value>
                <value>
                    <fullName>CG Obsolete - Cond Grad</fullName>
                </value>
                <value>
                    <fullName>CH Checked for Comm Letters</fullName>
                </value>
                <value>
                    <fullName>CN Cancel - Nursing Denial</fullName>
                </value>
                <value>
                    <fullName>CT Contingent</fullName>
                </value>
                <value>
                    <fullName>CU Cancel - Unknown College</fullName>
                </value>
                <value>
                    <fullName>DN Denied</fullName>
                </value>
                <value>
                    <fullName>EX Expired Application</fullName>
                </value>
                <value>
                    <fullName>FG 1st time Grad Studnt</fullName>
                </value>
                <value>
                    <fullName>FI Cancel-Financial</fullName>
                </value>
                <value>
                    <fullName>GCA Conditional Admit</fullName>
                </value>
                <value>
                    <fullName>HA Honors App Accepted</fullName>
                </value>
                <value>
                    <fullName>HC Cancel Honors Prog ONLY</fullName>
                </value>
                <value>
                    <fullName>HD Honors App Denied</fullName>
                </value>
                <value>
                    <fullName>HI Honors Interview Invitation</fullName>
                </value>
                <value>
                    <fullName>HL Cancel-Health</fullName>
                </value>
                <value>
                    <fullName>HU Honors Cancel: Not Int. In Onu</fullName>
                </value>
                <value>
                    <fullName>HW Honors App Waitlist</fullName>
                </value>
                <value>
                    <fullName>IT Cancel - Fr Intend to Transfer</fullName>
                </value>
                <value>
                    <fullName>LD Cancel-Learning Dis</fullName>
                </value>
                <value>
                    <fullName>MG Moved to Grad School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scholarship_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For EASY</description>
        <label>Scholarship-Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scholarship_Awarded__c</fullName>
        <description>For EASY</description>
        <label>Scholarship Awarded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scholarship_Recommended__c</fullName>
        <description>For EASY</description>
        <label>Scholarship-Recommended</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schools_Applied_To__c</fullName>
        <description>From EASY application</description>
        <label>zzSchools Applied To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Self_Reported_ACT__c</fullName>
        <description>From EASY Application</description>
        <inlineHelpText>Highest composite</inlineHelpText>
        <label>zzSelf-Reported ACT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>